Primeira atualização do index.html
Adicionando informações descritivas e alterando as cores da borda para o verde...

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Universidade Exemplo</title>
+    <title>Sobre mim</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -11,13 +11,13 @@
             padding: 0;
         }
         header {
-            background-color: #00274d;
+            background-color: #2F940A;
             color: white;
             padding: 20px;
             text-align: center;
         }
         nav {
-            background-color: #004080;
+            background-color: #37E624;
             padding: 10px;
             text-align: center;
         }
@@ -30,7 +30,7 @@
             padding: 20px;
         }
         footer {
-            background-color: #00274d;
+            background-color: #2F940A;
             color: white;
             text-align: center;
             padding: 15px;
@@ -43,34 +43,33 @@
 <body>
 
     <header>
-        <h1>Universidade Exemplo</h1>
-        <p>Conhecimento que transforma</p>
+        <h1>Quem sou eu ?</h1>
+        <p>HTML | CSS</p>
     </header>
 
     <nav>
         <a href="#">Início</a>
-        <a href="#">Cursos</a>
-        <a href="#">Sobre</a>
+        <a href="#">Certificados</a>
+        <a href="#">Feedback</a>
         <a href="#">Contato</a>
     </nav>
 
     <main>
-        <h2>Bem-vindo à Universidade Exemplo</h2>
+        <h2>Bem-vindo à Construção do meu site!</h2>
         <p>
-            Aqui você encontra os melhores cursos de graduação, pós-graduação e extensão.
-            Com professores qualificados e estrutura moderna, nossa missão é formar profissionais preparados para o futuro.
+            Aqui irei me apresentar um pouco mais sobre mim e meu desevolvimento profissional e pessoal ate o momento átraves da construção do meu primeiro site...
         </p>
 
-        <h3>Nossos Destaques</h3>
+        <h3>Minhas competências</h3>
         <ul>
-            <li>Laboratórios de última geração</li>
-            <li>Biblioteca com mais de 100 mil títulos</li>
-            <li>Programas de intercâmbio</li>
+            <li>Gestão de Estoque</li>
+            <li>Resiliênte</li>
+            <li>Auto Desenvolvimento</li>
         </ul>
     </main>
 
     <footer>
-        <p>&copy; 2025 Universidade Exemplo - Todos os direitos reservados.</p>
+        <p>&copy; 2025 - Todos os direitos reservados.</p>
     </footer>
 
 </body>
