borda final (index.html)
Corrigindo o problema da borda não ficar fixa na parte de baixo do site

--- a/index.html
+++ b/index.html
@@ -1,76 +1,89 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sobre mim</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-        }
-        header {
-            background-color: #2F940A;
-            color: white;
-            padding: 20px;
-            text-align: center;
-        }
-        nav {
-            background-color: #37E624;
-            padding: 10px;
-            text-align: center;
-        }
-        nav a {
-            color: white;
-            margin: 0 15px;
-            text-decoration: none;
-        }
-        main {
-            padding: 20px;
-        }
-        footer {
-            background-color: #2F940A;
-            color: white;
-            text-align: center;
-            padding: 15px;
-            position: relative;
-            bottom: 0;
-            width: 100%;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Sobre mim</title>
+  <style>
+    * {
+      box-sizing: border-box;
+    }
+
+    html, body {
+      margin: 0;
+      padding: 0;
+      height: 100%;
+    }
+
+    body {
+      display: flex;
+      flex-direction: column;
+      font-family: Arial, sans-serif;
+    }
+
+    header {
+      background-color: #2F940A;
+      color: white;
+      padding: 20px;
+      text-align: center;
+    }
+
+    nav {
+      background-color: #37E624;
+      padding: 10px;
+      text-align: center;
+    }
+
+    nav a {
+      color: white;
+      margin: 0 15px;
+      text-decoration: none;
+    }
+
+    main {
+      padding: 20px;
+      flex: 1;
+    }
+
+    footer {
+      background-color: #2F940A;
+      color: white;
+      text-align: center;
+      padding: 15px;
+    }
+  </style>
 </head>
 <body>
 
-    <header>
-        <h1>Quem sou eu ?</h1>
-        <p>HTML | CSS</p>
-    </header>
+  <header>
+    <h1>Quem sou eu?</h1>
+    <p>HTML | CSS</p>
+  </header>
 
-    <nav>
-        <a href="#">Início</a>
-        <a href="#">Certificados</a>
-        <a href="#">Feedback</a>
-        <a href="#">Contato</a>
-    </nav>
+  <nav>
+    <a href="#">Início</a>
+    <a href="#">Certificados</a>
+    <a href="#">Feedback</a>
+    <a href="#">Contato</a>
+  </nav>
 
-    <main>
-        <h2>Bem-vindo à Construção do meu site!</h2>
-        <p>
-            Aqui irei me apresentar um pouco mais sobre mim e meu desevolvimento profissional e pessoal ate o momento átraves da construção do meu primeiro site...
-        </p>
+  <main>
+    <h2>Bem-vindo à construção do meu site!</h2>
+    <p>
+      Aqui eu vou me apresentar um pouco mais e contar sobre meu desenvolvimento profissional e pessoal até o momento, por meio da criação do meu primeiro site...
+    </p>
 
-        <h3>Minhas competências</h3>
-        <ul>
-            <li>Gestão de Estoque</li>
-            <li>Resiliênte</li>
-            <li>Auto Desenvolvimento</li>
-        </ul>
-    </main>
+    <h3>Minhas competências</h3>
+    <ul>
+      <li>Gestão de Estoque</li>
+      <li>Resiliência</li>
+      <li>Autodesenvolvimento</li>
+    </ul>
+  </main>
 
-    <footer>
-        <p>&copy; 2025 - Todos os direitos reservados.</p>
-    </footer>
+  <footer>
+    <p>&copy; 2025 - Todos os direitos reservados.</p>
+  </footer>
 
 </body>
 </html>
