Atualizado Cores (index.html)
Realizado a alteração de cores das bordas para que fique algo mais natural

--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
     }
 
     header {
-      background-color: #2F940A;
+      background-color: #2C5F2D;
       color: white;
       padding: 20px;
       text-align: center;
     }
 
     nav {
-      background-color: #37E624;
+      background-color: #A8D5BA;
       padding: 10px;
       text-align: center;
     }
@@ -46,7 +46,7 @@
     }
 
     footer {
-      background-color: #2F940A;
+      background-color: #2C5F2D;
       color: white;
       text-align: center;
       padding: 15px;
