Adicionando caminho para os outros arquivos html (index.html)
Adicionado o caminho para os outros sites...

--- a/index.html
+++ b/index.html
@@ -91,10 +91,10 @@
   </header>
 
   <nav>
-    <a href="#">Início</a>
-    <a href="#">Certificados</a>
-    <a href="#">Feedback</a>
-    <a href="#">Contato</a>
+    <a href="index.html">Início</a>
+    <a href="certificados.html">Certificados</a>
+    <a href="feedback.html">Feedback</a>
+    <a href="contato.html">Contato</a>
   </nav>
 
   <main>
