Lista de Competencias (index.html)
Atualização de competências

--- a/index.html
+++ b/index.html
@@ -144,9 +144,11 @@
 
     <h3>Minhas competências</h3>
     <ul>
-      <li>Gestão de Estoque</li>
-      <li>Resiliência</li>
-      <li>Autodesenvolvimento</li>
+      <li>Interpretação de dados operacionais em campo</li>
+      <li>Conhecimento técnico em manutenção de máquinas agrícolas</li>
+      <li>Capacidade analítica para otimização de processos</li>
+      <li>Aprendizado contínuo em tecnologia e programação</li>
+      <li>Adaptação ao uso de ferramentas digitais (como SGPA e editores de código)</li>
     </ul>
 
     <section>
